fixed file-browser-overlay-z-index fixed border-bottom in select-box error

--- a/src/app/components/file-browser/file-list/file-list.component.scss
+++ b/src/app/components/file-browser/file-list/file-list.component.scss
@@ -135,6 +135,7 @@
     &.in
     {
         transform: translateY(0);
+        z-index: var(--zIndex-1);
     }
     
     .prompt-title
